--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "4S"
+      "size": "build"
     }
   },
   "image": "heroku/ruby",
